tests/ui/feature-gates/feature-gated-feature-in-macro-arg.stderr
error[E0658]: intrinsics are subject to change
  --> $DIR/feature-gated-feature-in-macro-arg.rs:8:16
   |
LL |         extern "crablang-intrinsic" {
   |                ^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
